fixed jump on cabinet page because of fixed header

--- a/assets/scss/components/page-cabinet.scss
+++ b/assets/scss/components/page-cabinet.scss
@@ -19,7 +19,7 @@
   }
   &_header{}
   &_breadcrumbs{
-    margin-top: 20px;
+    padding-top: 30px;
   }
   &_title{
     font-size: 40px;
